--- a/OCA-Frontend/oca-client/src/Components/App.css
+++ b/OCA-Frontend/oca-client/src/Components/App.css
@@ -1,3 +1,25 @@
 .App {
   text-align: center;
+  justify-items: center;
+  width: 75vw;
+  height: 70vh;
+}
+
+.chatField{
+  background-color: aliceblue;
+  border: 4px, solid, rgb(136, 136, 136);
+  border-radius: 80px;
+  height:100%;
+  width: 40%;
+  box-shadow: inset 0 0 20px 2px rgba(0, 0, 0, 0.3);
+}
+
+#userPrompt{
+  width: 40%;
+  height: 30%;
+}
+
+#userPrompt input{
+  width: 100%;
+  height: 100%;
 }
