--- a/OCA-Frontend/oca-client/src/Components/App.css
+++ b/OCA-Frontend/oca-client/src/Components/App.css
@@ -1,3 +1,7 @@
+/* Element rules */
+
+
+/* Class rules */
 .App {
   text-align: center;
   justify-items: center;
@@ -14,12 +18,17 @@
   box-shadow: inset 0 0 20px 2px rgba(0, 0, 0, 0.3);
 }
 
+/* ID rules */
 #userPrompt{
   width: 40%;
   height: 30%;
 }
 
-#userPrompt input{
-  width: 100%;
-  height: 100%;
+#userPrompt textarea{
+  resize: none;
+  border: 4px, solid, rgb(136, 136, 136);
+  border-radius: 30px;
+  max-width: 100%;
+  padding: 10px 5px;
+  margin-top: 10px;
 }
