--- a/OCA-Frontend/oca-client/src/Components/App.css
+++ b/OCA-Frontend/oca-client/src/Components/App.css
@@ -31,4 +31,8 @@
   max-width: 100%;
   padding: 10px 5px;
   margin-top: 10px;
+  &:hover{
+    box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.3);
+  }
+  /* box-shadow: inset 0 0 20px 2px rgba(0, 0, 0, 0.3); */
 }
