--- a/OCA-Frontend/oca-client/src/Components/App.css
+++ b/OCA-Frontend/oca-client/src/Components/App.css
@@ -21,18 +21,18 @@
 /* ID rules */
 #userPrompt{
   width: 40%;
-  height: 30%;
+  justify-items: center;
 }
 
 #userPrompt textarea{
   resize: none;
+  box-sizing: border-box;
   border: 4px, solid, rgb(136, 136, 136);
   border-radius: 30px;
-  max-width: 100%;
+  width: 100%;
   padding: 10px 5px;
   margin-top: 10px;
   &:hover{
     box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.3);
   }
-  /* box-shadow: inset 0 0 20px 2px rgba(0, 0, 0, 0.3); */
 }
